--- a/static/theme.css
+++ b/static/theme.css
@@ -107,6 +107,12 @@ h1#muse_name {
 	text-align:center;
 }
 
+a.emoji_button {
+	border: 2px solid;
+	border-radius: 5px;
+	text-decoration: none;
+}
+
 #major_pane > * {
 	width: calc(100% - 25px);
 }
